--- a/ConcurrentProgramming/ConcurrentProgramming/ConcurrentProgramming.csproj
+++ b/ConcurrentProgramming/ConcurrentProgramming/ConcurrentProgramming.csproj
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IStruct.cs" />
     <Compile Include="NonSafetyStruct.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafetyStruct.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
